--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -38,6 +38,9 @@ dependencies {
 	// bcrypt password hashing
 	implementation 'org.springframework.security:spring-security-crypto'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// for swagger ui
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 }
 
 tasks.named('test') {
