--- a/new-backend/Dockerfile
+++ b/new-backend/Dockerfile
@@ -7,6 +7,8 @@ WORKDIR /app
 # Install CompileDaemon for hot reloading
 RUN go install github.com/githubnemo/CompileDaemon@latest
 
+ENV PATH=$PATH:/go/bin
+
 # Copy the go.mod and go.sum files to download dependencies
 
 COPY go.mod go.sum ./
@@ -15,10 +17,14 @@ RUN go mod download
 # Copy the rest of the application code, including the .env file
 COPY . .
 
-# Expose the port your Go application listens on (replace 8080 with your app's port)
+# Expose the port your Go application listens on
 EXPOSE 8080
 
 # Command to run CompileDaemon
 # It watches for changes, rebuilds the app, and runs the new executable
 
-CMD CompileDaemon --build="go build -o /app/server /app/cmd/main.go" --command="/app/server" --recursive=true
+CMD CompileDaemon \
+    --build="go build -o /app/server /app/cmd/main.go" \
+    --command="/app/server" \
+    --recursive=true \
+    --polling
