unit tests and shit idk

--- a/new-backend/Dockerfile
+++ b/new-backend/Dockerfile
@@ -1,3 +1,6 @@
+# docker build -t server .
+# docker run -it -p 8080:8080 -v $(pwd):/app server-image
+
 # Use a Go base image
 FROM golang:1.23-alpine
 
@@ -29,3 +32,4 @@ CMD CompileDaemon \
     --command="/app/server" \
     --recursive=true \
     --polling
+
