fixed scripts and add import script for pokemon-species into the db

--- a/new-backend/Dockerfile
+++ b/new-backend/Dockerfile
@@ -1,5 +1,5 @@
 # docker build -t server .
-# docker run -it -p 8080:8080 -v $(pwd):/app server-image
+# docker run -it -p 8080:8080 -v $(pwd):/app server
 
 # Use a Go base image
 FROM golang:1.23-alpine
